...
    this.labelOnActiveOnly = true,
    this.items = const [
      MLNavItem(Icons.home_rounded, '홈'),
      MLNavItem(Icons.psychology_rounded, '인지훈련'),
      MLNavItem(Icons.directions_walk_rounded, '생활습관'),
      MLNavItem(Icons.bar_chart_rounded, '리포트'),
      MLNavItem(Icons.person_rounded, '내정보'),
    ],
  });

  @override
  Widget build(BuildContext context) {
    final t = Theme.of(context);
...
