...
              crossAxisAlignment: pw.CrossAxisAlignment.start,
              children: [
                pw.Text('도움이 필요하신 경우',
                    style: _ts(
                        fontSize: 9, bold: true, color: _primary)),
                pw.SizedBox(height: 5),
                pw.Text('치매안심센터: 1899-9988',
                    style: _ts(fontSize: 9)),
                pw.Text('정신건강위기상담전화: 1577-0199',
                    style: _ts(fontSize: 9)),
              ],
            ),
          ),
...
